Added Admin API

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
     "db_name": "igcviewer-extended-db",
     "track_db_collection_name": "tracks",
     "webhook_db_collection_name": "webhooks",
-    "max_tracks_per_page": 5 
+    "max_tracks_per_page": 5,
+    "admin_root": "PlayingGod"
 }
